--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,4 @@
+PORT = 5050
 
-MONGODB_URI= mongodb://localhost:27017/inventory
-PORT=3000
 
+MONGO_URI = mongodb+srv://arahernandez:arahernandez20@mern.ohwxw.mongodb.net/inventory?retryWrites=true&w=majority&appName=MERN
